# flare-metrics

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: flare-metrics_flr_ftso.csv  flare-metrics_flr_ftso.txt  flare-metrics_flr_validators.csv  flare-metrics_flr_validators.txt  flare-metrics_sgb_ftso.csv  flare-metrics_sgb_ftso.txt  flare_ftso.txt  flare_ftso_df.csv  flare_metrics.txt  flare_metrics_df.csv  flare_validators.txt  flare_validators_df.csv  songbird_ftso.txt  songbird_ftso_df.csv  sys-explorer_sgb_epoch_209.csv  sys-explorer_sgb_epoch_209.json  sys-explorer_sgb_epoch_210.csv  sys-explorer_sgb_epoch_210.json  sys-explorer_sgb_epoch_216.csv  sys-explorer_sgb_epoch_217.csv  sys-explorer_sgb_epoch_220.csv  sys-explorer_sgb_epoch_221.csv  sys-explorer_sgb_epoch_222.csv  sys-explorer_sgb_ftso.csv  sys-explorer_sgb_ftso.json
data_scripts/: flare_metrics_ftso.py  flare_metrics_validator.py  ftso_scrapper.py  metrics_scrapper.py  sys_explorer_epoch.py  sys_explorer_ftso.py  validator_scrapper.py
flare_metrics/: collect_validators.py  config.py  flare_metrics_ftso.py  ftso_collect.py  sys_explorer_epoch.py  sys_explorer_ftso.py
notebooks/: Untitled.ipynb  flare_metrics.txt  stake_analysis.ipynb  validators_data.csv
