[tool.poetry]
package-mode = false
name = "flare-metrics"
version = "0.1.0"
description = ""
authors = ["magurh <magureanuhoria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
pandas = "^2.2.2"
requests = "^2.32.3"
bs4 = "^0.0.2"
jupyterlab = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
