[tool.poetry]
name ="flare_metrics"
version = "0.1.0"
description = ""
authors = ["magurh <magureanuhoria@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
collect-epoch = "flare_metrics.sys_explorer_epoch:main"
collect-validators = "flare_metrics.collect_validators:main"
collect-ftso = "flare_metrics.ftso_collect:main"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
pandas = "^2.2.2"
requests = "^2.32.3"
bs4 = "^0.0.2"
jupyterlab = "^4.2.4"
matplotlib = "^3.9.2"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
